--- a/templates/index.html
+++ b/templates/index.html
@@ -133,7 +133,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
                         <li><a href="/new_sync_trade_data.html">同步交易数据</a></li>
 <!--                        <li><a href="/edit_hold_bond.html">更新持仓数据</a></li>-->
                         <li><a href="/view_my_up_down.html">可转债涨跌排行</a></li>
+                        <li><a href="/view_my_price_list.html">可转债价格排行</a></li>
                         <li><a href="/view_my_yield.html">我的收益率</a></li>
+                        <li><a href="/view_my_trade.html">我的交易记录</a></li>
                         <li><a href="#" onclick="process_wrapper('/update_bond_yield.html');return false">更新可转债收益率</a></li>
                     </ul>
                 </li>
