--- a/templates/page_with_navbar.html
+++ b/templates/page_with_navbar.html
@@ -15,6 +15,8 @@
         <script src="/static/js/jquery.bootstrap-autohidingnavbar.min.js"></script>
 
         <script type="text/javascript" src="/static/js/bootsnav.js"></script>
+        <script type="text/javascript" src="../static/js/popwin.js"></script>
+
         <title>{{ title }}</title>
         <style>
             html,body {height: 100%;}
@@ -246,5 +248,6 @@
      <script>
         $("div.navbar-fixed-top").autoHidingNavbar();
      </script>
+
     </body>
 </html>
