--- a/templates/edit_changed_bond_select.html
+++ b/templates/edit_changed_bond_select.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="icon" href="/static/img/favicon.ico">
-        <script src="https://code.z01.com/v4/dist/js/popper.min.js"></script>
+<!--        <script src="https://code.z01.com/v4/dist/js/popper.min.js"></script>-->
         <link rel="stylesheet" href="https://code.z01.com/v4/dist/css/bootstrap.min.css" >
 
         <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
@@ -31,6 +31,7 @@
             }
             .navbar-nav{
                 float: left;
+                display: block;
             }
             div.navbar.bootsnav ul.nav > li > a{
                 color: #474747;
@@ -108,9 +109,6 @@
             </ul>
         </div>
       </div>
-    <br/>
-    <br/>
-    <br/>
     <br/>
     <br/>
     <br/>
