--- a/templates/index.html
+++ b/templates/index.html
@@ -104,6 +104,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
             <ul class="nav navbar-nav" data-in="fadeInDown" data-out="fadeOutUp">
                 <li><a href="/">Home</a></li>
                 <li><a href="/view_market.html">可转债策略</a></li>
+                <li><a href="/view_trend.html">可转债走势</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">可转债统计分析</a>
                     <ul class="dropdown-menu">
@@ -116,9 +117,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
                       <li><a href="/view_turnover.html">换手率排行</a></li>
                     </ul>
                 </li>
+                <li><a href="#" onclick="process_wrapper('/realtime_update_data.html');return false">实时刷新</a></li>
 
                 {% if current_user and current_user.is_authenticated %}
-                <li><a href="#" onclick="process_wrapper('/realtime_update_data.html');return false">实时刷新</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">我的自选</a>
                     <ul class="dropdown-menu">
@@ -137,7 +138,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
                         <li><a href="/view_my_price_list.html">可转债价格排行</a></li>
                         <li><a href="/view_my_yield.html">我的收益率</a></li>
                         <li><a href="/view_my_trade_history.html">我的成交记录</a></li>
-                        <li><a href="#" onclick="process_wrapper('/update_bond_yield.html');return false">更新可转债收益率</a></li>
+                        <li><a href="#" onclick="process_wrapper('/update_data_when_trade_is_end.html');return false">收盘后更新数据</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
