--- a/templates/index.html
+++ b/templates/index.html
@@ -111,6 +111,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
                       <li><a href="/view_tree_map_industry.html">可转债涨跌行业分布</a></li>
                       <li><a href="/view_tree_map_price.html">可转债涨跌价格分布</a></li>
                       <li><a href="/view_tree_map_premium.html">可转债涨跌溢价率分布</a></li>
+                      <li><a href="/view_up_down_range.html">可转债涨跌幅分布</a></li>
                       <li><a href="/view_up_down.html">可转债涨跌排行</a></li>
                         <li><a href="/view_discount.html">溢价率折价排行</a></li>
                         <li><a href="/view_stock.html">正股涨幅排行</a></li>
