--- a/templates/edit_changed_bond_select.html
+++ b/templates/edit_changed_bond_select.html
@@ -117,6 +117,7 @@
     <div class="container">
         <form class="needs-validation" novalidate action="/save_changed_bond_select.html" method="post">
             <input type="hidden" name="id" id="id" value="{{ bond and bond['id'] or ''}}">
+            <input type="hidden" name="pinyin" id="pinyin" value="{{ bond and bond['pinyin'] or ''}}">
             <input type="hidden" name="back_url" value="{{ request.referrer}}">
             <div class="row">
                 <div class="col-md-6 mb-3">
@@ -165,58 +166,61 @@
           (function() {
             'use strict';
             window.addEventListener('load', function() {
+                // $('#bond_name').focus()
                 $('#bond_name').typeahead({
-                    autoSelect: false,//自动选择
-                    items: 10,//下拉选项个数
-                    fitToElement: false,
-                    delay: 500,//延迟毫米
-                    //minLength: 0,//最小触发请求的文本长度
-                    //高亮格式化
-                    highlighter: function (item) {
-                        var query = this.query.replace(/[\-\[\]{}()*+?.,\\\^$|#\s]/g, '\\$&');
-                        return item.replace(new RegExp('(' + query + ')', 'ig'), function ($1, match) {
-                            return '<strong style="color: red;">' + match + '</strong>'
-                        });
-                    },
-                    //选中项后触发
-                    afterSelect: function (data) {
-                        $("#id").val(data['id']);
-                        $("#bond_code").val(data['bond_code']);
-                        $("#bond_name").val(data['cb_name_id']);
-                        $("#strategy_type").val(data['strategy_type']);
-                        $("#memo").val(data['memo'])
-                    },
-                    //发送ajax
-                    source: function (query , process) {
-                        $.ajax({
-                            dataType:'json',
-                            url: "/find_changed_bond_select_by_name.html/" + query + "/",
-                            success: function (result) {
-                                if(result.length == 0){
-                                    return process([{"text" : "" , "name": "未找到包含 " + query + " 的数据"}]);
-                                }
-
-                                var list = result.map(function (item) {
-                                    var data = {"name": item.cb_name_id ,
-                                        'id': item.id,
-                                        "bond_code": item.bond_code ,
-                                        "cb_name_id": item.cb_name_id ,
-                                        "strategy_type": item.strategy_type ,
-                                        "memo": item.memo ,
-                                        "text" : item.cb_name_id};
-                                    return data;
-                                });
-                                return process(list);
-                            },
-                            error: function () {
+                autoSelect: false,//自动选择
+                items: 10,//下拉选项个数
+                fitToElement: false,
+                delay: 500,//延迟毫米
+                //minLength: 0,//最小触发请求的文本长度
+                //高亮格式化
+                highlighter: function (item) {
+                    var query = this.query.replace(/[\-\[\]{}()*+?.,\\\^$|#\s]/g, '\\$&');
+                    return item.replace(new RegExp('(' + query + ')', 'ig'), function ($1, match) {
+                        return '<strong style="color: red;">' + match + '</strong>'
+                    });
+                },
+                //选中项后触发
+                afterSelect: function (data) {
+                    $("#id").val(data['id']);
+                    $("#bond_code").val(data['bond_code']);
+                    $("#bond_name").val(data['cb_name_id']);
+                    $("#pinyin").val(data['pinyin']);
+                    $("#strategy_type").val(data['strategy_type']);
+                    $("#memo").val(data['memo'])
+                },
+                //发送ajax
+                source: function (query , process) {
+                    $.ajax({
+                        dataType:'json',
+                        url: "/find_changed_bond_select_by_name.html/" + query + "/",
+                        success: function (result) {
+                            if(result.length == 0){
                                 return process([{"text" : "" , "name": "未找到包含 " + query + " 的数据"}]);
                             }
-                        });
-                    }
+
+                            var list = result.map(function (item) {
+                                var data = {"name": item.cb_name_id + '(' + item.pinyin + ')' ,
+                                    'id': item.id,
+                                    "bond_code": item.bond_code ,
+                                    "cb_name_id": item.cb_name_id ,
+                                    "pinyin": item.pinyin ,
+                                    "strategy_type": item.strategy_type ,
+                                    "memo": item.memo ,
+                                    "text" : item.cb_name_id};
+                                return data;
+                            });
+                            return process(list);
+                        },
+                        error: function () {
+                            return process([{"text" : "" , "name": "未找到包含 " + query + " 的数据"}]);
+                        }
+                    });
+                }
                 });
 
-              var forms = document.getElementsByClassName('needs-validation');
-              var validation = Array.prototype.filter.call(forms, function(form) {
+                var forms = document.getElementsByClassName('needs-validation');
+                var validation = Array.prototype.filter.call(forms, function(form) {
                 form.addEventListener('submit', function(event) {
                   if (form.checkValidity() === false) {
                     event.preventDefault();
@@ -226,18 +230,19 @@
                 }, false);
               });
 
-            $("#bond_code").bind("input propertychange",function (event) {
-                $("#bond_name").val('')
-                doChange(event)
-            });
+                $("#bond_code").bind("input propertychange",function (event) {
+                    $("#bond_name").val('')
+                    doChange(event)
+                });
 
-            function doChange(event){
+                function doChange(event){
               $.get("/find_changed_bond_select_by_code.html?bond_code=" + $("#bond_code").val() + "&bond_name=" + $("#bond_name").val(), function (data, status) {
                 // alert(data)
                 if (status == 'success') {
                     $("#id").val(data['id']);
                     $("#bond_code").val(data['bond_code']);
                     $("#bond_name").val(data['cb_name_id']);
+                    $("#pinyin").val(data['pinyin']);
                     $("#strategy_type").val(data['strategy_type']);
                     $("#memo").val(data['memo'])
                 } else {
