--- a/templates/page_with_navbar.html
+++ b/templates/page_with_navbar.html
@@ -15,7 +15,7 @@
         <script src="/static/js/jquery.bootstrap-autohidingnavbar.min.js"></script>
 
         <script type="text/javascript" src="/static/js/bootsnav.js"></script>
-        <script type="text/javascript" src="../static/js/popwin.js"></script>
+        <script type="text/javascript" src="/static/js/popwin.js"></script>
 
         <title>{{ title }}</title>
         <style>
