--- a/templates/page_with_navbar.html
+++ b/templates/page_with_navbar.html
@@ -84,6 +84,10 @@
                 div.navbar.bootsnav ul.nav > li > a{ margin: 0; }
             }
 
+            table>tbody>tr:hover {
+                background-color: #a7ddd9;
+            }
+
             td, th {
               border-right :1px solid gray;
               border-bottom :1px solid gray;
