--- a/templates/index.html
+++ b/templates/index.html
@@ -110,12 +110,16 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">可转债分析</a>
                     <ul class="dropdown-menu">
-                      <li><a href="/view_tree_map_industry.html">可转债涨跌行业分布</a></li>
-                      <li><a href="/view_tree_map_price.html">可转债涨跌价格分布</a></li>
-                      <li><a href="/view_tree_map_premium.html">可转债涨跌溢价率分布</a></li>
-                      <li><a href="/view_up_down_range.html">可转债涨跌幅分布</a></li>
-                        <li><a href="/view_all_cb.html">可转债象限分布</a></li>
-                      <li><a href="/view_up_down.html">可转债涨跌排行</a></li>
+                      <li><a href="/view_tree_map_industry.html">行业涨跌分布</a></li>
+                      <li><a href="/view_industry_premium.html">行业溢价率分布</a></li>
+                      <li><a href="/view_industry_double_low.html">行业双低值分布</a></li>
+                      <li><a href="/view_tree_map_price.html">涨跌价格分布</a></li>
+                      <li><a href="/view_tree_map_remain.html">涨跌余额分布</a></li>
+                      <li><a href="/view_tree_map_premium.html">涨跌溢价率分布</a></li>
+                      <li><a href="/view_up_down_range.html">涨跌幅分布</a></li>
+                      <li><a href="/view_price_range.html">价格分布</a></li>
+                        <li><a href="/view_all_cb.html">全市场可转债分布</a></li>
+                      <li><a href="/view_up_down.html">涨跌排行</a></li>
                         <li><a href="/view_discount.html">溢价率折价排行</a></li>
                         <li><a href="/view_stock.html">正股涨幅排行</a></li>
                       <li><a href="/view_turnover.html">换手率排行</a></li>
