--- a/templates/index.html
+++ b/templates/index.html
@@ -119,6 +119,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
                       <li><a href="/view_up_down_range.html">涨跌幅分布</a></li>
                       <li><a href="/view_price_range.html">价格分布</a></li>
                         <li><a href="/view_all_cb.html">全市场可转债分布</a></li>
+                        <li><a href="/view_cb_wordcloud.html">可转债概念分析</a></li>
                       <li><a href="/view_up_down.html">涨跌排行</a></li>
                         <li><a href="/view_discount.html">溢价率折价排行</a></li>
                         <li><a href="/view_stock.html">正股涨幅排行</a></li>
@@ -156,7 +157,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
                         <li><a href="#" onclick="process_wrapper('/cb_ninwen.html');return false">更新所有可转债数据</a></li>
                         <li><a href="#" onclick="process_task('更新可转债条款明细', '/cb_ninwen_detail.html/update_terms/');return false">更新可转债条款明细</a></li>
                         <li><a href="#" onclick="process_task('更新诊断信息', '/stock_10jqka.html/update_diagnostic/');return false">同步同花顺正股诊断数据</a></li>
-                        <li><a href="#" onclick="process_task('更新正股信息', '/stock_eastmoney.html/update_stock/');return false">同步东财正股关键指标</a></li>
+                        <li><a href="#" onclick="process_task('更新正股信息', '/update_stock_key_info_from_eastmoney.html/update_stock/');return false">同步东财正股关键指标</a></li>
+                        <li><a href="#" onclick="process_task('更新概念信息', '/update_stock_theme_from_eastmoney.html/update_theme/');return false">同步东财正股概念信息</a></li>
                         <li><a href="#" onclick="process_task('更新财报信息', '/stock_xueqiu.html/update_stock_report/');return false">同步雪球正股财报指标</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">导入导出&nbsp;&nbsp;▸</a>
