--- a/templates/page_with_navbar.html
+++ b/templates/page_with_navbar.html
@@ -2,7 +2,6 @@
     <head>
         <meta charset="UTF-8">
 
-        <script type="text/javascript" src="/static/js/echarts.min.js"></script>
         <link rel="icon" href="/static/img/favicon.ico">
 
         <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
@@ -16,6 +15,9 @@
 
         <script type="text/javascript" src="/static/js/bootsnav.js"></script>
         <script type="text/javascript" src="/static/js/popwin.js"></script>
+
+        <script type="text/javascript" src="/static/js/echarts.min.js"></script>
+        <script type="text/javascript" src="/static/js/echarts-wordcloud.js"></script>
 
         <title>{{ title }}</title>
         <style>
